# Whistly

./: .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_REPORT.md  README.md  package-lock.json  package.json  supabase_rls_migration.sql  test.rs
.cargo/: audit.toml
app/: .env.example  .env.local.example  build-output.txt  eslint.config.mjs  jest.config.js  jest.setup.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  supabase-fan-matchday.sql  supabase-reactions.sql  supabase-schema.sql  tailwind.config.js
audit-notes/: README.md  kicktick-full-feature-ui-summary.md  kicktick-worldcup-ui-plan.md  live-goal-markets-final-summary.md  live-goal-markets-plan.md  live-goal-markets-second-pass.md  live-goal-markets-submission-readiness.md  live-goal-markets-test-plan.md  whistly-claude-design-reference.md  whistly-codebase-cleanup-report.md  whistly-consumer-fan-submission.md  whistly-fanatics-inspired-ui-pass.md  whistly-marketplace-ui-summary.md  whistly-polymarket-inspired-product-pass.md  (+9 more)
programs/instinctfi/: Cargo.toml
programs/instinctfi/src/: errors.rs  errors_v2.rs  events.rs  events_v2.rs  lib.rs  state.rs  state_v2.rs
programs/instinctfi/src/instructions/: admin_edit_poll.rs  admin_settle_poll.rs  cast_vote.rs  claim_reward.rs  create_poll.rs  delete_poll.rs  edit_poll.rs  initialize_platform.rs  initialize_user.rs  mod.rs  refund_tied_poll.rs  settle_poll.rs  sweep_dust.rs  update_platform_config.rs
programs/instinctfi/src/instructions/v2/: admin.rs  fill.rs  funds.rs  mod.rs  resolve.rs  sets.rs
(+338 files in other folders)
